--- a/frontend/src/pages/Model/Texture/EditTexture.css
+++ b/frontend/src/pages/Model/Texture/EditTexture.css
@@ -2,7 +2,8 @@
   display: flex;
   width: 100%;
   height: 100%;
-}
+  background-color: #f0f0f030;
+  z-index: 999;}
 
 .edit-texture-content {
   padding: 20px;
